--- a/fronte/package.json
+++ b/fronte/package.json
@@ -26,10 +26,10 @@
     "node-sass": "^6.0.1",
     "png-js": "^1.0.0",
     "sass-loader": "^12.1.0",
+    "style-loader": "^3.3.0",
     "webpack": "^5.58.2",
-    "webpack-cli": "^4.9.0",
-    "webpack-dev-server": "^4.3.1",
-    "style-loader": "^3.3.0"
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.3.1"
   },
   "dependencies": {}
 }
