--- a/fronte/package.json
+++ b/fronte/package.json
@@ -31,5 +31,7 @@
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.3.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "nodemon": "^2.0.14"
+  }
 }
